@@ -1,3 +1,8 @@
+2006-04-03  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* examples/text-rotate/text-rotate.cc: protect PNG functions with #ifdef in
+	case cairo wasn't compiled with PNG support
+
 2006-03-31  Danilo Piazzalunga  <danilopiazza@gmail.com>
 
 	* Makefile.am:
